login: Fix overlapped "Connect to:" & alert
Fixes #17458

--- a/src/branding/default/branding.css
+++ b/src/branding/default/branding.css
@@ -18,8 +18,8 @@ body.login-pf {
 }
 
 #brand {
-    width: 121px;
-    height: 18px;
+    min-width: 121px;
+    min-height: 18px;
     background-image: url("brand-large.png");
     background-repeat: no-repeat;
 }
